--- a/index.html
+++ b/index.html
@@ -66,6 +66,49 @@
             <p>Chief Adviser of the People's Republic of Bangladesh</p>
         </div>
     </section>
+    <section>
+        <h3 class="recent-text">Recent News</h3>
+        <p class="commontext">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+        <!-- .news>img.image4+.sat-news>p.launch+img.image5+p.time+.commontext+button.explore -->
+        <div class="news">
+            <img src="assets/satelite.png" alt="" class="image4">
+            <div class="sat-news">
+                <p class="launch">Bangladesh Launches New Satellite</p>
+                <img src="assets/al-jazeera.png" alt="" class="image5">
+                <p class="time">Date: 05/01/2025 Time: 10.25 PM</p>
+                <div class="commontext">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</div>
+                <button class="explore">Read More</button>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="news">
+            <div class="sat-news">
+                <p class="launch">Bangladesh Launches New Satellite</p>
+                <img src="assets/al-jazeera.png" alt="" class="image5">
+                <p class="time">Date: 05/01/2025 Time: 10.25 PM</p>
+                <div class="commontext">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</div>
+                <button class="explore">Read More</button>
+            </div>
+            <img src="assets/satelite.png" alt="" class="image4">
+        </div>
+
+    </section>
+    <section>
+        <div class="news">
+            <img src="assets/satelite.png" alt="" class="image4">
+            <div class="sat-news">
+                <p class="launch">Bangladesh Launches New Satellite</p>
+                <img src="assets/al-jazeera.png" alt="" class="image5">
+                <p class="time">Date: 05/01/2025 Time: 10.25 PM</p>
+                <div class="commontext">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</div>
+                <button class="explore">Read More</button>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
