--- a/index.html
+++ b/index.html
@@ -109,6 +109,25 @@
             </div>
         </div>
     </section>
+    <section class="donate">
+        <h3 class="recent-text">Donate Today</h3>
+        <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+        <div class="taka">
+          <textarea class="taka100" placeholder="100Taka" name="" id=""></textarea>
+          <textarea class="taka100" placeholder="200Taka" name="" id=""></textarea>
+          <textarea class="taka100" placeholder="500Taka" name="" id=""></textarea>
+          <textarea class="taka100" placeholder="1000Taka" name="" id=""></textarea>
+        </div>
+        <div class="mydiv2">
+            <textarea class="taka100" class="other-amount" id="" placeholder="Other amount (Taka)"></textarea>
+        </div>
+        <div class="mydiv">
+            <input class="button-donate bs" type="button" value="Donate Now">
+        </div>
+    </section>
     
 </body>
+<footer>
+
+</footer>
 </html>
