--- a/index.html
+++ b/index.html
@@ -125,9 +125,26 @@
             <input class="button-donate bs" type="button" value="Donate Now">
         </div>
     </section>
+    <section>
+    <div class="subscribe">
+        <h3 class="recent-text">Subscribe Newsletter</h3>
+        <div class="subscribe-text">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</div>
+        <div class="subscribe-flex">
+            <div class="email-subscribe"> <input type="email" name=""     id=""        placeholder="Enter your email here"></div>
+              <div class="button-subscribe"><input type="button" value="Subscribe">
+            <div>
+        </div>
+        <p>We promise not to spam you!</p>
+    </div>
+    </section>
     
 </body>
 <footer>
-
+    <div class="bangla">
+        <p>Bangladesh 2.0</p>
+    </div>
+   <div class="last">
+    <img src="assets/facebook.png" alt=""><img src="assets/instagram.png" alt=""><img src="assets/x.png" alt="">
+    </div>
 </footer>
 </html>
