pillar portion sent

--- a/index.html
+++ b/index.html
@@ -31,7 +31,34 @@
            <img src="assets/hero.png" alt="It`s Loading">
             </div>
         </div>
+        <!-- pillar-section -->
     </section>
+    <h3 class="pillar-text recent-text">Pillars of "Bangladesh 2.0"</h3>
+    <!-- .pillar>.pillar-card*4>img.image2+h4+p -->
+    <div class="pillar">
+        <div class="pillar-card">
+            <img src="assets/card-icon.png" alt="" class="image2">
+            <h4>Innovation</h4>
+            <p>The new Bangladesh is working to innovate many more thing to cop up with the new requirments</p>
+        </div>
+        <div class="pillar-card">
+            <img src="assets/card-icon.png" alt="" class="image2">
+            <h4>Sustainability</h4>
+            <p>Sustainable improvement is a crying need for the future generation of this country</p>
+        </div>
+        <div class="pillar-card">
+            <img src="assets/card-icon.png" alt="" class="image2">
+            <h4>Infrastructure</h4>
+            <p>Infrastructural improvement of this new born developed country is a chalenge of all</p>
+        </div>
+        <div class="pillar-card">
+            <img src="assets/card-icon.png" alt="" class="image2">
+            <h4>Empowerment</h4>
+            <p>Empowerment is a applied base sector, what people enjoy in their practical day-today life</p>
+        </div>
+    </div>
+
+
     <section>
         <h3 class="vision-text">The Vision of Future</h3>
         <h4 class="vision-details">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</h4>
